refactor: add interactive-widget attribute

--- a/packages/components/blockquote-dialog/demo/base.html
+++ b/packages/components/blockquote-dialog/demo/base.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, interactive-widget=resizes-content.0" />
+      content="width=device-width, initial-scale=1, interactive-widget=resizes-content" />
     <meta name="description" content="Demo Base - blockquote-dialog" />
     <title>Base - blockquote-dialog</title>
     <style>
